--- a/index.html
+++ b/index.html
@@ -91,14 +91,14 @@
             <div class="col-lg-6">
               <ul>
                 <li><i class="icofont-rounded-right"></i> <strong>Date de naissance:</strong> 23 Octobre 1996</li>
-                <li><i class="icofont-rounded-right"></i> <strong>Téléphone:</strong> (+33) 6.73.05.78.80</li>
+                <li><i class="icofont-rounded-right"></i> <strong>Téléphone:</strong> (+33) 6 73 05 78 80</li>
                 <li><i class="icofont-rounded-right"></i> <strong>Ville:</strong> Saint-Martin, France</li>
               </ul>
             </div>
             <div class="col-lg-6">
               <ul>
                 <li><i class="icofont-rounded-right"></i> <strong>Âge:</strong> 23</li>
-                <li><i class="icofont-rounded-right"></i> <strong>Diplôme actuel:</strong> BTS</li>
+                <li><i class="icofont-rounded-right"></i> <strong>Diplôme actuel:</strong> BTS SIO</li>
                 <li><i class="icofont-rounded-right"></i> <strong>Adresse email:</strong> charlesbourtoire@gmail.com</li>
               </ul>
             </div>
@@ -279,7 +279,7 @@
             <p>
             <ul>
               <li>78660, Saint-Martin</li>
-              <li>(+33) 6.73.05.78.80</li>
+              <li>(+33) 6 73 05 78 80</li>
               <li>charlesbourtoire@gmail.com</li>
             </ul>
             </p>
@@ -302,7 +302,7 @@
             <h4>Baccalauréat STMG - option Gestion et Finance</h4>
             <h5>2013 - 2015</h5>
             <p><em>Lycée Sarcey, Dourdan</em></p>
-            <p>Obtenu avec mention "Bien".</p>
+            <p>Obtenu avec mention Bien.</p>
           </div>
         </div>
         <div class="col-lg-6">
@@ -364,7 +364,7 @@
 
       <div class="section-title">
         <h2>Portfolio</h2>
-        <p>Certains de mes projets</p>
+        <p>Projets</p>
       </div>
 
       <div class="row">
@@ -483,7 +483,7 @@
         <div class="col-md-6 d-flex align-items-stretch">
           <div class="info-box">
             <i class="bx bx-map"></i>
-            <h3>Mon Address</h3>
+            <h3>Mon Addresse</h3>
             <p>Saint-Martin-de-Bréthencourt, 78660, France</p>
           </div>
         </div>
@@ -505,14 +505,14 @@
           <div class="info-box">
             <i class="bx bx-envelope"></i>
             <h3>Adresse email</h3>
-            <p>charlesbourtoire]gmail.com</p>
+            <p>charlesbourtoire@gmail.com</p>
           </div>
         </div>
         <div class="col-md-6 mt-4 d-flex align-items-stretch">
           <div class="info-box">
             <i class="bx bx-phone-call"></i>
             <h3>Téléphone portable</h3>
-            <p>(+33) 6.73.05.78.80</p>
+            <p>(+33) 6 73 05 78 80</p>
           </div>
         </div>
       </div>
