--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
             <h4>Baccalauréat STMG - option Gestion et Finance</h4>
             <h5>2013 - 2015</h5>
             <p><em>Lycée Sarcey, Dourdan</em></p>
-            <p>Obtenu avec mention Bien.</p>
+            <p>Mention Bien.</p>
           </div>
         </div>
         <div class="col-lg-6">
@@ -332,8 +332,8 @@
             <p>
             <ul>
               <li>Saisie comptable</li>
-              <li>Rapprochements bancaire</li>
-              <li>Préparation des grand-livres</li>
+              <li>Rapprochements bancaires</li>
+              <li>Préparation des grands livres</li>
             </ul>
             </p>
           </div>
@@ -344,8 +344,8 @@
             <p>
             <ul>
               <li>Saisie comptable</li>
-              <li>Rapprochements bancaire</li>
-              <li>Préparation des grand-livres</li>
+              <li>Rapprochements bancaires</li>
+              <li>Préparation des grands livres</li>
               <li>Préparation des bilans</li>
               <li>Vérification de TVA</li>
               <li>Veille juridique et comptable</li>
