--- a/index.html
+++ b/index.html
@@ -287,6 +287,12 @@
 
           <h3 class="resume-title">Scolarité</h3>
           <div class="resume-item">
+            <h4>Bachelor chef de projet informatique</h4>
+            <h5>2020 - 2021</h5>
+            <p><em>H3 Hitema, Issy-les-Moulineaux</em></p>
+            <p>Bachelor chef de projet informatique, spécialisation développement web et mobile.</p>
+          </div>
+          <div class="resume-item">
             <h4>BTS SIO option SLAM</h4>
             <h5>2018 - 2020</h5>
             <p><em>Efficom, Montrouge</em></p>
