--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <h1><a href="index.html">Charles</a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
-      <h2>Etudiant en BTS SIO, je suis en alternance sur Paris. <br>
+      <h2>Etudiant en Licence de chef de projet informatique, je suis en alternance sur Paris. <br>
         Je suis passionné d' <span>informatique</span>, plus particulièrement de <span>développement</span>.</h2>
 
       <nav class="nav-menu d-none d-lg-block">
@@ -97,8 +97,8 @@
             </div>
             <div class="col-lg-6">
               <ul>
-                <li><i class="icofont-rounded-right"></i> <strong>Âge:</strong> 23</li>
-                <li><i class="icofont-rounded-right"></i> <strong>Diplôme actuel:</strong> BTS SIO</li>
+                <li><i class="icofont-rounded-right"></i> <strong>Âge:</strong> 24</li>
+                <li><i class="icofont-rounded-right"></i> <strong>Diplôme actuel:</strong> Licence Chef de projet Informatique</li>
                 <li><i class="icofont-rounded-right"></i> <strong>Adresse email:</strong> charlesbourtoire@gmail.com</li>
               </ul>
             </div>
@@ -120,7 +120,7 @@
         <div class="col-lg-3 col-md-6">
           <div class="count-box">
             <i class="fas fa-graduation-cap"></i>
-            <span data-toggle="counter-up">4</span>
+            <span data-toggle="counter-up">5</span>
             <p>Années d'étude</p>
           </div>
         </div>
@@ -136,7 +136,7 @@
         <div class="col-lg-3 col-md-6 mt-5 mt-lg-0">
           <div class="count-box">
             <i class="icofont-users-alt-5"></i>
-            <span data-toggle="counter-up">5</span>
+            <span data-toggle="counter-up">7</span>
             <p>Projets tutorés</p>
           </div>
         </div>
@@ -144,7 +144,7 @@
         <div class="col-lg-3 col-md-6 mt-5 mt-lg-0">
           <div class="count-box">
             <i class="icofont-user"></i>
-            <span data-toggle="counter-up">1</span>
+            <span data-toggle="counter-up">3</span>
             <p>Projet personnel</p>
           </div>
         </div>
